# NeuTu

./: .gitignore  README.md  build.sh  build_debug.sh  conda_build.sh  proba.pgm
conda-recipe/: build.sh  meta.yaml
neurolabi/: Compile_Windows.txt  LICENSE  buildlib.sh  cmake_update_library  cmake_update_library.bat  runtime_md.props  update_library  update_library_64
neurolabi/c/: CMakeLists.txt  Makefile  Makefile-def.in  Makefile.ctc  arinfo.c  bwdist.c  combine_image_channels.c  configure  configure.ac  gentestdata.c  imds.c  imop.c  reconstruct_neuron.c  testarray.c  testbwdist.c  testcolor.c  testgeo3d.c  testimglib.c  testneuroseg.c  testobjdetect.c  testsampling.c  testspgrow.c  teststack.c  teststring.c  testswc.c  testtiffio.c  testutilities.c  testwatershed.c  trace_all.sh  trace_neuron3.c  tz_3dgeom.c  tz_apo.c  tz_apo.h  tz_array.c.t  tz_array.h.t  tz_arraylist.c.t  tz_arrayqueue.c  tz_arrayqueue.h  tz_arraytrans.c  tz_bifold_neuroseg.c  (+138 more)
neurolabi/c/cmake_modules/: FindFFTW3.cmake  FindFFTW3F.cmake  FindJANSSON.cmake  FindLibXml2_MY.cmake  FindPCRE.cmake  FindPNG_MY.cmake  FindZLIB_MY.cmake
neurolabi/c/include/: neurolabi_config_cmake.in  tz_cdefs.h  tz_stdint.h
neurolabi/c/private/: tz_image_code.c  tz_stack_bwdist.c  tz_stack_bwdist_mu16.c  tz_stack_bwmorph.c  tzp_local_neuroseg.c  tzp_swc_tree.c
neurolabi/cpp/: CMakeLists.txt
neurolabi/cpp/lib/: CMakeLists.txt.qc  Makefile  build.sh
neurolabi/cpp/map_body/: map_body.pro
neurolabi/cpp/skeletonize/: CMakeLists.txt  build.sh  skeletonize.pro
neurolabi/cpp/tbar/: CMakeLists.txt  run_test
neurolabi/cpp/tbar/src/: CMakeLists.txt  Tbar_apply_sa.cpp
neurolabi/doc/: flyem_shortcut.html  neutu_manual.doc  shortcut.html
neurolabi/doc/dot/: 3dpaint.dot  3dpaint.h  3dvis.dot  3dvis.h  dvid_object.dot  event_flow.dot  flyem_protocol.dot  flyem_protocol.h  flyem_thumbnail.dot  main.dot  match.h  object_manage.dot  object_manage.h  open_file.dot  open_file.h  proofread.dot  proofread.h  segmentation_bundle.dot  signal_slot.h  sp_grow.dot  spec.dot  spec.h  spec2.h  spec3.dot  task_manage.dot  task_manage.h  test.dot  thread_manage.dot  thread_manage.h  view_zoom.dot  view_zoom.h  windownet.dot  windownet.h
neurolabi/doc/html/: compare_doc.html  machine.html  seed_doc.html  skeletonize_doc.html  trace_doc.html
neurolabi/doc/schema/: roiref.json
neurolabi/gui/: CMakeLists.txt  CMakeLists_qt.txt  ZSharedPointer.h  add_itk.pri  autosaveswclistdialog.cpp  bcadjustdialog.cpp  bcadjustdialog.ui  biocytin_config.xml  c_json.cpp  c_json.h  c_stack.cpp  c_stack.h  check_conda_lib  check_libdep  config.xml  config_flyem.xml  config_flyem_3dfix.xml  deploy_linux  deploy_mac  deploy_mac_flyem  deploy_qt_for_neuTube  deploy_win.bat  diagnosisdialog.ui  dvidimagedialog.cpp  dvidimagedialog.h  dvidimagedialog.ui  dvidobjectdialog.cpp  dvidobjectdialog.h  dvidobjectdialog.ui  dvidoperatedialog.cpp  dvidoperatedialog.ui  dvidskeletonizedialog.cpp  dvidskeletonizedialog.h  dvidskeletonizedialog.ui  extlib.pri  extratarget.pri  flyembodyfilterdialog.cpp  flyembodyfilterdialog.h  flyembodyfilterdialog.ui  flyembodyiddialog.ui  (+950 more)
neurolabi/gui/bigdata/: bigdata.pri  zblockgrid.cpp  zblockgrid.h  zblockgridfactory.cpp  zblockgridfactory.h  zchunkdatasource.hpp  zdatachunk.cpp  zdatachunk.h  zdvidblockgrid.cpp  zdvidblockgrid.h  zintpointannotationblockgrid.hpp  zintpointannotationchunk.cpp  zintpointannotationchunk.h  zintpointannotationsource.cpp  zintpointannotationsource.hpp  zitemchunk.cpp  zitemchunk.hpp  zitemdatasource.hpp  zmockitemchunk.cpp  zmockitemchunk.h  zstackblockgrid.cpp  zstackblockgrid.h
neurolabi/gui/biocytin/: swcprocessor.cpp  swcprocessor.h  zbiocytinfilenameparser.cpp  zbiocytinfilenameparser.h  zbiocytinprojectiondoc.cpp  zbiocytinprojectiondoc.h  zbiocytinprojmaskfactory.cpp  zbiocytinprojmaskfactory.h  zstackprojector.cpp  zstackprojector.h
neurolabi/gui/command/: command.pri  utilities.cpp  utilities.h  zbodyexportcommand.cpp  zbodyexportcommand.h  zbodyprocesscommand.cpp  zbodyprocesscommand.h  zbodysplitcommand.cpp  zbodysplitcommand.h  zcommandmodule.cpp  zcommandmodule.h  zmultiscalewatershedcommand.cpp  zneurontracecommand.h  (+20 more)
neurolabi/json/: command_config.json  command_config_mb.json  config.json  flyem_config.json  skeletonize.json  skeletonize.schema.json  skeletonize_fib25_len40.json  skeletonize_mb.json  skeletonize_mb_len40.json  sync.json  sync2.json  trace.json  trace.schema.json  trace_config.json  trace_config_biocytin.json
neurolabi/lib/: build.sh
neurolabi/lib/genelib/: CMakeLists.txt  build.sh
neurolabi/lib/genelib/conda-recipe/: build.sh  meta.yaml
neurolabi/lib/genelib/src/: Makefile_a  Makefile_a.in  genelib.cmake  level_set.p  tiff_image.p  tiff_io.p
neurolabi/python/: CMakeParser.py  QMakeParser.py  TaskManager.py  corrrect_raveler.py  cpp2dot  cpparser.py  detect_tips.py  dvid.py  flyem.py  flyem_process.py  hdf5_explorer.py  neugeo.py  neututils.py  ntmake  ntmake.py  qcmake.py  quality_analyzer.py  skeletonize.py  stackImageProcess.py  test.py  testjson.py
neurolabi/shell/: assert_succ.sh  bigneuron_cpresult  bigneuron_script  bigneuron_trace  build_neutu  build_package  condarc  config_neutu_debug  debug_neutu  dvid_branch  fixqtdebug  flyem_backup_fib19  flyem_backup_mb6  flyem_backup_node  flyem_lowtis_patch  flyem_machine  flyem_master_node  flyem_ntupd  flyem_post_install  flyem_prepare_imat  flyem_service  flyem_setup_linux_conda  flyem_upload_alroi  flyem_upload_roi  flyem_upload_split  flyem_utilities.sh  initcpp  initcpp_simple  initcpp_t  lowtis_cmakelists.txt  lsmachine  machine.txt  mkqtmain  mkshell  neutu  neutu_conda_requirements.txt  neutu_conda_requirements_linux.txt  neutu_conda_requirements_mac.txt  neutu_qt_prepare  neutu_qt_prepare_env  (+33 more)
recipe-neu3-develop/: build.sh  meta.yaml
recipe-neutu/: build.sh  conda_build_config.yaml  meta.yaml
recipe-neutu-develop/: build.sh  meta.yaml
recipe-neutu/patches/: libgl-is-in-build-prefix.patch
recipe-neutube-python/: build.sh  meta.yaml
recipe-neutube-python-debug/: build.sh  meta.yaml
(+1756 files in other folders)
